Implemented REST requirements.